Fix timeStep and add script for Debugging
timeStep currently is testing on only 1 machine, more testing should be done.

--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="Source\NPC.h">
       <Filter>Entity</Filter>
     </ClInclude>
+    <ClInclude Include="Debug.h">
+      <Filter>System File\Header File</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\AssetManager.cpp">
