Minor fix of WindowProperties

--- a/SrandEngine/SrandEngine/imgui.ini
+++ b/SrandEngine/SrandEngine/imgui.ini
@@ -9,12 +9,27 @@ Size=32,35
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=678,18
-Size=550,680
+Pos=641,0
+Size=583,692
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=60,60
 Size=338,256
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=510,251
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=450,267
 Collapsed=0
 
