--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -21,38 +21,40 @@
   <ItemGroup>
     <ClInclude Include="Debug.h" />
     <ClInclude Include="ecspch.h" />
+    <ClInclude Include="ECS\Animator.h" />
+    <ClInclude Include="ECS\BoxCollider2D.h" />
+    <ClInclude Include="ECS\Collision.h" />
+    <ClInclude Include="ECS\Component.h" />
+    <ClInclude Include="ECS\ECS.h" />
+    <ClInclude Include="ECS\GameObject.h" />
+    <ClInclude Include="ECS\RigidBody.h" />
+    <ClInclude Include="ECS\Sprite.h" />
+    <ClInclude Include="ECS\SpriteRenderer.h" />
+    <ClInclude Include="ECS\TileSelector.h" />
+    <ClInclude Include="ECS\Transform.h" />
+    <ClInclude Include="Entity\Button.h" />
+    <ClInclude Include="Entity\Door.h" />
+    <ClInclude Include="Entity\Elevator.h" />
+    <ClInclude Include="Entity\NPC.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
     <ClInclude Include="imgui\imgui_impl_opengl3.h" />
     <ClInclude Include="imgui\imgui_internal.h" />
-    <ClInclude Include="Source\SceneManager.h" />
-    <ClInclude Include="Source\Animator.h" />
     <ClInclude Include="Source\AssetManager.h" />
-    <ClInclude Include="Source\BoxCollider2D.h" />
-    <ClInclude Include="Source\Button.h" />
-    <ClInclude Include="Source\Camera.h" />
-    <ClInclude Include="Source\Collision.h" />
-    <ClInclude Include="Source\Component.h" />
-    <ClInclude Include="Source\Door.h" />
-    <ClInclude Include="Source\ECS.h" />
-    <ClInclude Include="Source\Elevator.h" />
     <ClInclude Include="Source\EntityManager.h" />
+    <ClInclude Include="Source\SceneManager.h" />
+    <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\Engine.h" />
-    <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\Input.h" />
     <ClInclude Include="Source\Mesh.h" />
-    <ClInclude Include="Source\NPC.h" />
     <ClInclude Include="Source\Shader.h" />
-    <ClInclude Include="Source\RigidBody.h" />
-    <ClInclude Include="Source\SpriteRenderer.h" />
     <ClInclude Include="Source\TimeStep.h" />
-    <ClInclude Include="Source\Transform.h" />
     <ClInclude Include="Source\Vector2D.h" />
     <ClInclude Include="Source\Vertex.h" />
-    <ClInclude Include="Source\TileSelector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ECS\Collision.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -62,7 +64,6 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Source\SceneManager.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
-    <ClCompile Include="Source\Collision.cpp" />
     <ClCompile Include="Source\EntityManager.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\AssetManager.cpp" />
