--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -189,5 +189,8 @@
     <ClCompile Include="Log.cpp">
       <Filter>SrandEngine</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Input.cpp">
+      <Filter>SrandEngine</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
