--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -31,12 +31,16 @@
     <ClInclude Include="ECS\SpriteRenderer.h" />
     <ClInclude Include="ECS\TileSelector.h" />
     <ClInclude Include="ECS\Transform.h" />
+    <ClInclude Include="Entity\Barter.h" />
     <ClInclude Include="Entity\Benny.h" />
     <ClInclude Include="Entity\Button.h" />
     <ClInclude Include="Entity\CC.h" />
+    <ClInclude Include="Entity\Cherry.h" />
     <ClInclude Include="Entity\Door.h" />
     <ClInclude Include="Entity\Elevator.h" />
+    <ClInclude Include="Entity\Macho.h" />
     <ClInclude Include="Entity\NPC.h" />
+    <ClInclude Include="Entity\Pear.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
