--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -232,5 +232,6 @@
     <ClCompile Include="Source\ObjectManager.cpp">
       <Filter>SrandEngine</Filter>
     </ClCompile>
+    <ClCompile Include="Source\LevelManager.cpp" />
   </ItemGroup>
 </Project>
