--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -151,12 +151,6 @@
     <ClInclude Include="Source\WindowsInput.h">
       <Filter>SrandEngine\Input System</Filter>
     </ClInclude>
-    <ClInclude Include="Entity\CC.h" />
-    <ClInclude Include="Entity\Benny.h" />
-    <ClInclude Include="Entity\Barter.h" />
-    <ClInclude Include="Entity\Pear.h" />
-    <ClInclude Include="Entity\Cherry.h" />
-    <ClInclude Include="Entity\Macho.h" />
     <ClInclude Include="Source\Scene.h">
       <Filter>SrandEngine\Scene</Filter>
     </ClInclude>
@@ -169,6 +163,24 @@
     <ClInclude Include="Source\LevelManager.h" />
     <ClInclude Include="Source\Audio.h">
       <Filter>SrandEngine\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity\Barter.h">
+      <Filter>SrandEngine\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity\Benny.h">
+      <Filter>SrandEngine\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity\CC.h">
+      <Filter>SrandEngine\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity\Cherry.h">
+      <Filter>SrandEngine\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity\Macho.h">
+      <Filter>SrandEngine\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity\Pear.h">
+      <Filter>SrandEngine\Entity</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
