--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -54,6 +54,9 @@
     <ClInclude Include="Source\AssetManager.h" />
     <ClInclude Include="Source\Audio.h" />
     <ClInclude Include="Source\EntityManager.h" />
+    <ClInclude Include="Source\GUI.h" />
+    <ClInclude Include="Source\GUI_Array.h" />
+    <ClInclude Include="Source\GUI_Button.h" />
     <ClInclude Include="Source\Input.h" />
     <ClInclude Include="Source\KeyCode.h" />
     <ClInclude Include="Source\LevelManager.h" />
